syntax = "proto3";

package course;

import "common/base_response.proto";
import "buf/validate/validate.proto";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/abu-umair/be-lms-go/pb/course";


service CourseService {
    rpc CreateCourse (CreateCourseRequest) returns (CreateCourseResponse);
    rpc DetailCourse (DetailCourseRequest) returns (DetailCourseResponse);
    rpc EditCourse (EditCourseRequest) returns (EditCourseResponse);
    rpc DeleteCourse (DeleteCourseRequest) returns (DeleteCourseResponse);
}

message CreateCourseRequest {
  string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string name = 2 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string address = 3 [(buf.validate.field).string = { max_len: 1000 }];
  string image_file_name = 4 [(buf.validate.field).string = { min_len: 1, max_len: 255}];
  optional string slug = 5 [(buf.validate.field).string = { max_len: 255 }];
  optional string category_id = 6 [(buf.validate.field).string = { max_len: 255 }];
  optional string course_type = 7 [(buf.validate.field).string = { max_len: 255 }];
  optional string title = 8 [(buf.validate.field).string = { max_len: 255 }];
  optional string seo_description = 9 [(buf.validate.field).string = { max_len: 255 }];
  optional string duration = 10 [(buf.validate.field).string = { max_len: 255 }];
  optional string timezone = 11 [(buf.validate.field).string = { max_len: 255 }];
  optional string thumbnail = 12 [(buf.validate.field).string = { max_len: 255 }];
  optional string demo_video_storage = 13 [(buf.validate.field).string = { max_len: 255 }];
  optional string demo_video_source = 14 [(buf.validate.field).string = { max_len: 255 }];
  optional string description = 15 [(buf.validate.field).string = { max_len: 255 }];
  optional int64 capacity = 16 [(buf.validate.field).int64.gte = 0];
  optional string price = 17 [(buf.validate.field).string = { pattern: "^[0-9]+(\\.[0-9]{1,2})?$" }];
  optional string discount = 18 [(buf.validate.field).string = { pattern: "^[0-9]+(\\.[0-9]{1,2})?$" }];
  optional string certificate = 19 [(buf.validate.field).string = { max_len: 255 }];
  optional string gna = 20 [(buf.validate.field).string = { max_len: 255 }];
  optional string message_for_reviewer = 21 [(buf.validate.field).string = { max_len: 255 }];
  optional string is_approved = 22 [(buf.validate.field).string = { max_len: 255 }];
  optional string status = 23 [(buf.validate.field).string = { max_len: 255 }];
  optional string course_level_id = 24 [(buf.validate.field).string = { max_len: 255 }];
  optional string course_language_id = 25 [(buf.validate.field).string = { max_len: 255 }];
  optional string instructor_id = 26 [(buf.validate.field).string = { max_len: 255 }];
}

message CreateCourseResponse {
  common.BaseResponse base = 1;
  string id = 2;
//   string name = 3;
//   string address = 4;

}

message DetailCourseRequest {
  string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  google.protobuf.FieldMask field_mask = 2;
}

message DetailCourseResponse {
  common.BaseResponse base = 1;
  string id = 2;
  optional string name = 3;
  optional string address = 4;
  optional string slug = 5;
  optional string category_id = 6;
  optional string course_type = 7;
  optional string title = 8;
  optional string seo_description = 9;
  optional string duration = 10;
  optional string timezone = 11;
  optional string thumbnail = 12;
  optional string demo_video_storage = 13;
  optional string demo_video_source = 14;
  optional string description = 15;
  optional int64 capacity = 16;
  optional string price = 17;
  optional string discount = 18;
  optional string certificate = 19;
  optional string gna = 20;
  optional string message_for_reviewer = 21;
  optional string is_approved = 22;
  optional string status = 23;
  optional string course_level_id = 24;
  optional string course_language_id = 25;
  optional string instructor_id = 26;
  optional string created_at = 27;
  optional string created_by = 28;
  optional string deleted_by = 29;
  optional string updated_at = 30;
  optional string updated_by = 31;
  optional string deleted_at = 32;
  optional string image_file_name = 33;
}

message EditCourseRequest {
  string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string name = 2 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  string address = 3 [(buf.validate.field).string = { max_len: 1000 }];
  string image_file_name = 4 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
  optional string slug = 5 [(buf.validate.field).string = { max_len: 255 }];
  optional string category_id = 6 [(buf.validate.field).string = { max_len: 255 }];
  optional string course_type = 7 [(buf.validate.field).string = { max_len: 255 }];
  optional string title = 8 [(buf.validate.field).string = { max_len: 255 }];
  optional string seo_description = 9 [(buf.validate.field).string = { max_len: 255 }];
  optional string duration = 10 [(buf.validate.field).string = { max_len: 255 }];
  optional string timezone = 11 [(buf.validate.field).string = { max_len: 255 }];
  optional string thumbnail = 12 [(buf.validate.field).string = { max_len: 255 }];
  optional string demo_video_storage = 13 [(buf.validate.field).string = { max_len: 255 }];
  optional string demo_video_source = 14 [(buf.validate.field).string = { max_len: 255 }];
  optional string description = 15 [(buf.validate.field).string = { max_len: 255 }];
  optional int64 capacity = 16 [(buf.validate.field).int64.gte = 0];
  optional string price = 17 [(buf.validate.field).string = { pattern: "^[0-9]+(\\.[0-9]{1,2})?$" }];
  optional string discount = 18 [(buf.validate.field).string = { pattern: "^[0-9]+(\\.[0-9]{1,2})?$" }];
  optional string certificate = 19 [(buf.validate.field).string = { max_len: 255 }];
  optional string gna = 20 [(buf.validate.field).string = { max_len: 255 }];
  optional string message_for_reviewer = 21 [(buf.validate.field).string = { max_len: 255 }];
  optional string is_approved = 22 [(buf.validate.field).string = { max_len: 255 }];
  optional string status = 23 [(buf.validate.field).string = { max_len: 255 }];
  optional string course_level_id = 24 [(buf.validate.field).string = { max_len: 255 }];
  optional string course_language_id = 25 [(buf.validate.field).string = { max_len: 255 }];
  optional string instructor_id = 26 [(buf.validate.field).string = { max_len: 255 }];
}

message EditCourseResponse {
  common.BaseResponse base = 1;
  string id = 2;
//   string name = 3;
//   string address = 4;

}

message DeleteCourseRequest {
  string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message DeleteCourseResponse {
  common.BaseResponse base = 1;
}